# store

./: .gitignore  Dockerfile  README.md  app_cache.db  cache.db  index.html  index.py  layout.py  layout_left.py  layout_right.py  main.py  mariadb.py  nuxt.config.ts  package.json  requirements.txt  setup.py  sql.json  start.py  uos.sql  upgrade.py  util.py
app/: app.vue
app/server/api/classify/: get.ts
app/types/: classify2software.ts
layouts/: defalut.vue
pages/: header.vue  index.vue
pages/software/: [id].vue
server/utils/: db.ts
src/: App.vue  Header.vue  Main.vue  data.ts  index.scss  main.ts  style.css  style.scss  type.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/header/: index.css  index.ts  index.vue
src/components/main/: index.css  index.ts  index.vue
src/types/: category.d.ts  index.d.ts  pager.d.ts  software.d.ts  system.d.ts
types/: classify.ts  index.ts  software.ts
