[package]
name = "app"
version = "0.1.0"
description = "内网应用商店"
authors = ["王野"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = ["shell-execute"] }
mysql = "28.0.0"
once_cell = "1.20.3"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
